--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>TPS Survey</title>
+	<title>TPS Report</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -49,6 +49,7 @@
 <script src="lib/underscore-min.js"></script>
 <script src="lib/backbone-min.js"></script>
 <script src="lib/bootstrap.min.js"></script>
+<script src="lib/Chart.js"></script>
 
 <script src="js/utils.js"></script>
 <script src="js/models/models.js"></script>
@@ -61,6 +62,7 @@
 <script src="js/views/stats.js"></script>
 <script src="js/views/sprint.js"></script>
 <script src="js/views/vote.js"></script>
+<script src="js/views/chart.js"></script>
 <script src="js/main.js"></script>
 
 </body>
