--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
 	<!-- Le styles -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 	<style>
 		body {
 			padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -35,12 +36,14 @@
 		<div id="content" class="span12>"></div>
 	</div>
 
-	<footer class="footer">
-		<p>Built for the MediaMath July Hackathon</p>
-	</footer>
-
 </div>
 <!-- /container -->
+
+<div class="footer">
+	<div class="container">
+		<p class="text-muted">Built for the MediaMath Summer 2014 Hackathon</p>
+	</div>
+</div>
 
 <!-- Le javascript
 ================================================== -->
@@ -63,6 +66,7 @@
 <script src="js/views/sprint.js"></script>
 <script src="js/views/vote.js"></script>
 <script src="js/views/chart.js"></script>
+<script src="js/views/admin.js"></script>
 <script src="js/main.js"></script>
 
 </body>
