--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,10 @@
 
 	<!-- Le styles -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/jquery-ui.min.css" rel="stylesheet">
+	<link href="css/jquery-ui.structure.min.css" rel="stylesheet">
+	<link href="css/jquery-ui.theme.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-	<style>
-		body {
-			padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-		}
-	</style>
-
 	<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -52,6 +49,7 @@
 <script src="lib/underscore-min.js"></script>
 <script src="lib/backbone-min.js"></script>
 <script src="lib/bootstrap.min.js"></script>
+<script src="lib/jquery-ui.min.js"></script>
 <script src="lib/Chart.js"></script>
 
 <script src="js/utils.js"></script>
@@ -67,6 +65,9 @@
 <script src="js/views/vote.js"></script>
 <script src="js/views/chart.js"></script>
 <script src="js/views/admin.js"></script>
+<script src="js/views/personAdmin.js"></script>
+<script src="js/views/questionAdmin.js"></script>
+<script src="js/views/sprintAdmin.js"></script>
 <script src="js/main.js"></script>
 
 </body>
