--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>TPS Report</title>
+	<title>MediaMath Cambridge - TPS Report</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -38,7 +38,7 @@
 
 <div class="footer">
 	<div class="container">
-		<p class="text-muted">Built for the MediaMath Summer 2014 Hackathon</p>
+		<p class="text-muted">Built for the MediaMath Summer 2014 Hackathon by Jessica Andersen, David Ashpole, and Rob Falconi</p>
 	</div>
 </div>
 
